<resources>
    <string name="app_name">Appadore Machine Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flags_challenge">Flags Challenge</string>
    <string name="schedule">Schedule</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="save">Save</string>
    <string name="challenge">Challenge</string>
    <string name="will_start_in">Will start in</string>
    <string name="schedule_success_message">Challenge scheduled successfully</string>
    <string name="guess_the_country_from_the_flag">Guess the country from the flag?</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
</resources>