<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.schedule.ScheduleFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/half_common_margin"
        android:layout_marginTop="@dimen/common_margin"
        android:backgroundTint="@color/lightGreyCard"
        app:cardCornerRadius="@dimen/half_common_margin"
        app:cardElevation="@dimen/no_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:strokeWidth="@dimen/no_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dr_timer_background"
                android:paddingHorizontal="@dimen/large_margin"
                android:paddingVertical="@dimen/common_margin"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="@dimen/text_sub_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flags_challenge"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_heading"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tvTimer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTimer"
                app:layout_constraintTop_toTopOf="@id/tvTimer" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGreyDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTimer" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTextSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/schedule"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/tvHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/hour"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content"
                app:layout_constraintEnd_toEndOf="@id/boxViewHour"
                app:layout_constraintStart_toStartOf="@id/boxViewHour"
                app:layout_constraintTop_toBottomOf="@id/tvTextSchedule" />

            <com.otpview.OTPTextView
                android:id="@+id/boxViewHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                app:box_margin="6dp"
                app:height="40dp"
                app:hide_otp="false"
                app:hide_otp_drawable="@drawable/bg_otp_box_hide"
                app:layout_constraintEnd_toStartOf="@id/boxViewMinute"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHour"
                app:length="2"
                app:otp="00"
                app:otp_box_background="@drawable/bg_otp_box"
                app:otp_box_background_active="@drawable/bg_otp_box_active"
                app:otp_box_background_error="@drawable/bg_otp_box_error"
                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
                app:otp_box_background_success="@drawable/bg_otp_box_success"
                app:otp_text_size="20sp"
                app:width="35dp" />

            <TextView
                android:id="@+id/tvMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_common_margin"
                android:text="@string/minute"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content"
                app:layout_constraintBottom_toTopOf="@id/boxViewMinute"
                app:layout_constraintEnd_toEndOf="@id/boxViewMinute"
                app:layout_constraintStart_toStartOf="@id/boxViewMinute" />

            <com.otpview.OTPTextView
                android:id="@+id/boxViewMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                app:box_margin="6dp"
                app:height="40dp"
                app:hide_otp="false"
                app:hide_otp_drawable="@drawable/bg_otp_box_hide"
                app:layout_constraintEnd_toStartOf="@id/boxViewSecond"
                app:layout_constraintStart_toEndOf="@id/boxViewHour"
                app:layout_constraintTop_toBottomOf="@id/tvHour"
                app:length="2"
                app:otp="00"
                app:otp_box_background="@drawable/bg_otp_box"
                app:otp_box_background_active="@drawable/bg_otp_box_active"
                app:otp_box_background_error="@drawable/bg_otp_box_error"
                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
                app:otp_box_background_success="@drawable/bg_otp_box_success"
                app:otp_text_size="20sp"
                app:width="35dp" />

            <TextView
                android:id="@+id/tvSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_common_margin"
                android:text="@string/second"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content"
                app:layout_constraintBottom_toTopOf="@id/boxViewSecond"
                app:layout_constraintEnd_toEndOf="@id/boxViewSecond"
                app:layout_constraintStart_toStartOf="@id/boxViewSecond" />

            <com.otpview.OTPTextView
                android:id="@+id/boxViewSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                app:box_margin="6dp"
                app:height="40dp"
                app:hide_otp="false"
                app:hide_otp_drawable="@drawable/bg_otp_box_hide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/boxViewMinute"
                app:layout_constraintTop_toBottomOf="@id/tvHour"
                app:length="2"
                app:otp="00"
                app:otp_box_background="@drawable/bg_otp_box"
                app:otp_box_background_active="@drawable/bg_otp_box_active"
                app:otp_box_background_error="@drawable/bg_otp_box_error"
                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
                app:otp_box_background_success="@drawable/bg_otp_box_success"
                app:otp_text_size="20sp"
                app:width="35dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:text="@string/save"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="@id/boxViewSecond"
                app:layout_constraintStart_toStartOf="@id/boxViewHour"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/half_common_margin"
                app:layout_constraintTop_toBottomOf="@id/boxViewHour" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>